--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+dist/
 # Runtime data
 pids
 *.pid
@@ -35,7 +36,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-dist
+
 
 # TypeScript v1 declaration files
 typings/
