--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "echart": "^0.1.3",
+    "jquery": "^3.4.1",
+    "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
