Fix search drop down issue, connect to reddit api

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,13 @@
         {
             "type": "chrome",
             "request": "launch",
+            "name": "Launch Chrome 3000",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "file:///D:/ProjectOne/js/dist/index.html",
             "webRoot": "${workspaceFolder}"
